--- a/css/style.css
+++ b/css/style.css
@@ -183,11 +183,11 @@ footer {
 /* Media queries */
 @media (min-width: 700px) {
   :root {
-    --bg-url: url(../assets/bg-desktop.jpg);
+    --bg-url: url(../assets/bg-desktop.png);
   }
 
   .light {
-    --bg-url: url(../assets/bg-desktop-light.jpg);
+    --bg-url: url(../assets/bg-desktop-light.png);
   }
 }
 
